force-app/main/default/objects/Contact/fields/MailingLine1__c.field-meta.xml
<CustomField>
    <fullName>MailingLine1__c</fullName>
    <label>Mailing Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>