force-app/main/default/objects/Contact/fields/MailingLine2__c.field-meta.xml
<CustomField>
    <fullName>MailingLine2__c</fullName>
    <label>Mailing Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>