force-app/main/default/objects/Contact/fields/MailingLine3__c.field-meta.xml
<CustomField>
    <fullName>MailingLine3__c</fullName>
    <label>Mailing Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>