force-app/main/default/objects/Contact/fields/MailingStateProvince__c.field-meta.xml
<CustomField>
    <fullName>MailingStateProvince__c</fullName>
    <label>Mailing State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>