force-app/main/default/objects/Contact/fields/MailingZipCode__c.field-meta.xml
<CustomField>
    <fullName>MailingZipCode__c</fullName>
    <label>Mailing Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>