force-app/main/default/objects/Contact/fields/Manual_Owner_Override__c.field-meta.xml
<CustomField>
    <fullName>Manual_Owner_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Owner Override</label>
    <type>Checkbox</type>
</CustomField>