force-app/main/default/objects/Contact/fields/Match_CX_ID__c.field-meta.xml
<CustomField>
    <fullName>Match_CX_ID__c</fullName>
    <label>Match J1 ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>