force-app/main/default/objects/Contact/fields/Medical_Conditions_Description__c.field-meta.xml
<CustomField>
    <fullName>Medical_Conditions_Description__c</fullName>
    <label>Medical Conditions Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>