force-app/main/default/objects/Contact/fields/Medications__c.field-meta.xml
<CustomField>
    <fullName>Medications__c</fullName>
    <label>Medications</label>
    <type>TextArea</type>
</CustomField>