force-app/main/default/objects/Contact/fields/Military_Active_Vet__c.field-meta.xml
<CustomField>
    <fullName>Military_Active_Vet__c</fullName>
    <label>Military Active/Vet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AD</fullName>
                <label>Active Duty</label>
            </value>
            <value>
                <fullName>VT</fullName>
                <label>Veteran</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>