force-app/main/default/objects/Contact/fields/Military_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Military_Affiliation__c</fullName>
    <label>Military Affiliation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>