force-app/main/default/objects/Contact/fields/Military_Branch__c.field-meta.xml
<CustomField>
    <fullName>Military_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Military Branch</label>
    <referenceTo>Military__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>