force-app/main/default/objects/Contact/fields/Mobile_E_164__c.field-meta.xml
<CustomField>
    <fullName>Mobile_E_164__c</fullName>
    <formula>IF(MobilePhone&lt;&gt; &quot;&quot;, &apos;+1&apos; + RIGHT( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( MobilePhone,&quot;-&quot;,&quot;&quot;) , &quot; &quot;, &quot;&quot;) , &quot;)&quot;,&quot;&quot;) ,&quot;(&quot;,&quot;&quot;),10), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile E.164</label>
    <type>Text</type>
</CustomField>