force-app/main/default/objects/Contact/fields/Name_of_Portal_Profile__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Portal_Profile__c</fullName>
    <label>Name of Portal Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>