force-app/main/default/objects/Contact/fields/Niche_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Niche_Activity_Date__c</fullName>
    <label>Niche Activity Date</label>
    <type>Date</type>
</CustomField>