force-app/main/default/objects/Contact/fields/Niche_Conditional_Admit__c.field-meta.xml
<CustomField>
    <fullName>Niche_Conditional_Admit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Niche Conditional Admit</label>
    <type>Checkbox</type>
</CustomField>