force-app/main/default/objects/Contact/fields/Niche_Conditional_Admit_Date__c.field-meta.xml
<CustomField>
    <fullName>Niche_Conditional_Admit_Date__c</fullName>
    <label>Niche Conditional Admit Date</label>
    <type>Date</type>
</CustomField>