force-app/main/default/objects/Contact/fields/Niche_Conditional_Admit_Onboard_Complete__c.field-meta.xml
<CustomField>
    <fullName>Niche_Conditional_Admit_Onboard_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Niche Conditional Admit Onboard Complete</label>
    <type>Checkbox</type>
</CustomField>