force-app/main/default/objects/Contact/fields/Niche_Conditional_Scholarship__c.field-meta.xml
<CustomField>
    <fullName>Niche_Conditional_Scholarship__c</fullName>
    <label>Niche Conditional Scholarship</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>