force-app/main/default/objects/Contact/fields/Niche_Onboard_Form_Date__c.field-meta.xml
<CustomField>
    <fullName>Niche_Onboard_Form_Date__c</fullName>
    <label>Niche Onboard Form Date</label>
    <type>Date</type>
</CustomField>