force-app/main/default/objects/Contact/fields/Niche_User_UUID__c.field-meta.xml
<CustomField>
    <fullName>Niche_User_UUID__c</fullName>
    <label>Niche User UUID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>