force-app/main/default/objects/Contact/fields/Niche_User_UUID_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Niche_User_UUID_Secondary__c</fullName>
    <label>Niche User UUID Secondary</label>
    <length>50</length>
    <type>Text</type>
</CustomField>