force-app/main/default/objects/Contact/fields/OtherAddressLine1__c.field-meta.xml
<CustomField>
    <fullName>OtherAddressLine1__c</fullName>
    <label>Other Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>