force-app/main/default/objects/Contact/fields/OtherAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>OtherAddressLine2__c</fullName>
    <label>Other Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>