force-app/main/default/objects/Contact/fields/OtherAddressLine3__c.field-meta.xml
<CustomField>
    <fullName>OtherAddressLine3__c</fullName>
    <label>Other Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>