force-app/main/default/objects/Contact/fields/OtherCountry__c.field-meta.xml
<CustomField>
    <fullName>OtherCountry__c</fullName>
    <label>Other Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Values</valueSetName>
    </valueSet>
</CustomField>