force-app/main/default/objects/Contact/fields/OtherCounty__c.field-meta.xml
<CustomField>
    <fullName>OtherCounty__c</fullName>
    <label>Other County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>