force-app/main/default/objects/Contact/fields/OtherPostalCode__c.field-meta.xml
<CustomField>
    <fullName>OtherPostalCode__c</fullName>
    <label>Other Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>