force-app/main/default/objects/Contact/fields/OtherState__c.field-meta.xml
<CustomField>
    <fullName>OtherState__c</fullName>
    <label>Other State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_Picklist_Values</valueSetName>
    </valueSet>
</CustomField>