force-app/main/default/objects/Contact/fields/OtherStateProvince__c.field-meta.xml
<CustomField>
    <fullName>OtherStateProvince__c</fullName>
    <label>Other State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>