force-app/main/default/objects/Contact/fields/OtherZipCode__c.field-meta.xml
<CustomField>
    <fullName>OtherZipCode__c</fullName>
    <label>Other Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>