force-app/main/default/objects/Contact/fields/Outbound_New_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Outbound_New_Campaign__c</fullName>
    <label>Outbound New Campaign</label>
    <length>50</length>
    <type>Text</type>
</CustomField>