force-app/main/default/objects/Contact/fields/Outbound_New_Campaign_Date__c.field-meta.xml
<CustomField>
    <fullName>Outbound_New_Campaign_Date__c</fullName>
    <label>Outbound New Campaign Date</label>
    <type>DateTime</type>
</CustomField>