force-app/main/default/objects/Contact/fields/Parent_Guardian_Email_address__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_Email_address__c</fullName>
    <label>Parent/Guardian Email address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>