force-app/main/default/objects/Contact/fields/Parent_Guardian_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_Full_Name__c</fullName>
    <label>Parent/Guardian Full Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>