force-app/main/default/objects/Contact/fields/Parent_Guardian_Phone_number__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_Phone_number__c</fullName>
    <label>Parent/Guardian Phone number</label>
    <type>Phone</type>
</CustomField>