force-app/main/default/objects/Contact/fields/Permanent_Address_Same_as_Mailing__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Address_Same_as_Mailing__c</fullName>
    <label>Permanent Address Same as Mailing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>