force-app/main/default/objects/Contact/fields/Permission_to_receive_texts__c.field-meta.xml
<CustomField>
    <fullName>Permission_to_receive_texts__c</fullName>
    <label>Permission to receive texts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>