force-app/main/default/objects/Contact/fields/Phone_E_164__c.field-meta.xml
<CustomField>
    <fullName>Phone_E_164__c</fullName>
    <formula>IF(Phone &lt;&gt; &quot;&quot;, &apos;+1&apos; + RIGHT( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( Phone,&quot;-&quot;,&quot;&quot;) , &quot; &quot;, &quot;&quot;) , &quot;)&quot;,&quot;&quot;) ,&quot;(&quot;,&quot;&quot;),10), &quot;&quot;)</formula>
    <label>Phone E.164</label>
    <type>Text</type>
</CustomField>