force-app/main/default/objects/Contact/fields/Portal_Name__c.field-meta.xml
<CustomField>
    <fullName>Portal_Name__c</fullName>
    <label>Portal Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baker College Applicant Portal</fullName>
            </value>
            <value>
                <fullName>St. Francis School of Law Applicant Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>