force-app/main/default/objects/Contact/fields/Portal_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Portal_User_Name__c</fullName>
    <label>Portal User Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>