force-app/main/default/objects/Contact/fields/Preferred_In_Game_Role__c.field-meta.xml
<CustomField>
    <fullName>Preferred_In_Game_Role__c</fullName>
    <label>Preferred In-Game Role</label>
    <type>TextArea</type>
</CustomField>