force-app/main/default/objects/Contact/fields/Preferred_Pronoun__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Pronoun__c</fullName>
    <label>Preferred Pronoun</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>He/Him</fullName>
            </value>
            <value>
                <fullName>She/Her</fullName>
            </value>
            <value>
                <fullName>They/Them</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>