force-app/main/default/objects/Contact/fields/Primary_Academic_Program_PL__c.field-meta.xml
<CustomField>
    <fullName>Primary_Academic_Program_PL__c</fullName>
    <label>Primary Academic Program PL</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accelerated Nursing BSN</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Accounting (4+1)</fullName>
            </value>
            <value>
                <fullName>Accounting (4+1) (BBA)</fullName>
            </value>
            <value>
                <fullName>Accounting (BBA/MBA)</fullName>
            </value>
            <value>
                <fullName>Accounting (BBA)</fullName>
            </value>
            <value>
                <fullName>Accounting (MBA)</fullName>
            </value>
            <value>
                <fullName>Accounting - MBA</fullName>
            </value>
            <value>
                <fullName>Automation Engineering Technology</fullName>
            </value>
            <value>
                <fullName>Automation Engineering Technology (BS)</fullName>
            </value>
            <value>
                <fullName>Automotive Services Technology</fullName>
            </value>
            <value>
                <fullName>Automotive Services Technology (AAS)</fullName>
            </value>
            <value>
                <fullName>Automotive Services Technology (Certificate)</fullName>
            </value>
            <value>
                <fullName>Automotive Services Technology-Certificate</fullName>
            </value>
            <value>
                <fullName>Baking and Pastry</fullName>
            </value>
            <value>
                <fullName>Baking and Pastry (AAS)</fullName>
            </value>
            <value>
                <fullName>Biology (BS)</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Business (BS)</fullName>
            </value>
            <value>
                <fullName>Business Administration (BBS) - Accelerated</fullName>
            </value>
            <value>
                <fullName>Business Administration (DBA)</fullName>
            </value>
            <value>
                <fullName>Business Administration (DBA-ABD)</fullName>
            </value>
            <value>
                <fullName>Business Administration (MBA)</fullName>
            </value>
            <value>
                <fullName>Business Administration Accelerated Program</fullName>
            </value>
            <value>
                <fullName>Business Administration - Accelerated Program</fullName>
            </value>
            <value>
                <fullName>Business Intelligence (MBA)</fullName>
            </value>
            <value>
                <fullName>Cardiac Sonography</fullName>
            </value>
            <value>
                <fullName>Cardiac Sonography (AAS)</fullName>
            </value>
            <value>
                <fullName>Cloud Security Risk Management - MSIS</fullName>
            </value>
            <value>
                <fullName>Cloud Security Risk Management - Post-Baccalaureate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>