force-app/main/default/objects/Contact/fields/Primary_Student_Organization__c.field-meta.xml
<CustomField>
    <fullName>Primary_Student_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Student Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (Primary Student Organization)</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>