force-app/main/default/objects/Contact/fields/Program_Intrested_non_Baker__c.field-meta.xml
<CustomField>
    <fullName>Program_Intrested_non_Baker__c</fullName>
    <label>Program Intrested (non Baker)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>