force-app/main/default/objects/Contact/fields/Pronouns_Formula__c.field-meta.xml
<CustomField>
    <fullName>Pronouns_Formula__c</fullName>
    <description>Used by J1 integration</description>
    <formula>TEXT( Pronouns )</formula>
    <label>Pronouns (Formula)</label>
    <type>Text</type>
</CustomField>