force-app/main/default/objects/Contact/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rank</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Military__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Military Rank</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Military__c</referenceTo>
    <relationshipLabel>Contacts (Rank)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>