force-app/main/default/objects/Contact/fields/Ready_To_Register__c.field-meta.xml
<CustomField>
    <fullName>Ready_To_Register__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready To Register</label>
    <type>Checkbox</type>
</CustomField>