force-app/main/default/objects/Contact/fields/Registration_status__c.field-meta.xml
<CustomField>
    <fullName>Registration_status__c</fullName>
    <formula>text( EnrollmentrxRx__Active_Enrollment_Opportunity__r.Registration_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration status</label>
    <type>Text</type>
</CustomField>