force-app/main/default/objects/Contact/fields/Relevant_Links__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Links__c</fullName>
    <label>Relevant Links</label>
    <type>TextArea</type>
</CustomField>