force-app/main/default/objects/Contact/fields/ReplyTo__c.field-meta.xml
<CustomField>
    <fullName>ReplyTo__c</fullName>
    <label>ReplyTo</label>
    <type>Email</type>
</CustomField>