force-app/main/default/objects/Contact/fields/Reporting_Term_Active_App__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Term_Active_App__c</fullName>
    <formula>Text(EnrollmentrxRx__Active_Enrollment_Opportunity__r.Semester__r.Reporting_Term__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Term Active App</label>
    <type>Text</type>
</CustomField>