force-app/main/default/objects/Contact/fields/Return_to_Hive__c.field-meta.xml
<CustomField>
    <fullName>Return_to_Hive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return to Hive</label>
    <type>Checkbox</type>
</CustomField>