force-app/main/default/objects/Contact/fields/Running_Start_Anticipated_HS_Grad_Year__c.field-meta.xml
<CustomField>
    <fullName>Running_Start_Anticipated_HS_Grad_Year__c</fullName>
    <label>Running Start Anticipated HS Grad Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>