force-app/main/default/objects/Contact/fields/Running_Start_Direct__c.field-meta.xml
<CustomField>
    <fullName>Running_Start_Direct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Running Start Direct</label>
    <type>Checkbox</type>
</CustomField>