force-app/main/default/objects/Contact/fields/Running_Start_Dual__c.field-meta.xml
<CustomField>
    <fullName>Running_Start_Dual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Running Start Dual</label>
    <type>Checkbox</type>
</CustomField>