force-app/main/default/objects/Contact/fields/Running_Start_EMC__c.field-meta.xml
<CustomField>
    <fullName>Running_Start_EMC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Running Start EMC</label>
    <type>Checkbox</type>
</CustomField>