force-app/main/default/objects/Contact/fields/Semester_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Semester_Start_Date__c</fullName>
    <formula>EnrollmentrxRx__Active_Enrollment_Opportunity__r.Semester__r.hed__Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Semester Start Date</label>
    <type>Date</type>
</CustomField>