force-app/main/default/objects/Contact/fields/SIS_Academic_Hold__c.field-meta.xml
<CustomField>
    <fullName>SIS_Academic_Hold__c</fullName>
    <inlineHelpText>Academic Hold from J1</inlineHelpText>
    <label>SIS Academic Hold</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>