force-app/main/default/objects/Contact/fields/SIS_Academic_Standing__c.field-meta.xml
<CustomField>
    <fullName>SIS_Academic_Standing__c</fullName>
    <inlineHelpText>The Student&apos;s Academic Standing from J1</inlineHelpText>
    <label>SIS Academic Standing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Re-Entry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>