force-app/main/default/objects/Contact/fields/SIS_Academic_Status_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>SIS_Academic_Status_Changed_Date__c</fullName>
    <label>SIS Academic Status Changed Date</label>
    <type>DateTime</type>
</CustomField>