force-app/main/default/objects/Contact/fields/SIS_Acadmic_Status__c.field-meta.xml
<CustomField>
    <fullName>SIS_Acadmic_Status__c</fullName>
    <inlineHelpText>The Student&apos;s current Academic Status. 
Current = Currently take classes. 
StopOut = has not taken a class in 1 - 3 semesters. 
ReEntry = has not taken a class in 4 or more semester. 
StFrancis = St Francis Student.</inlineHelpText>
    <label>SIS Academic Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>ReEntry</fullName>
            </value>
            <value>
                <fullName>StopOut</fullName>
            </value>
            <value>
                <fullName>StFrancis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>