force-app/main/default/objects/Contact/fields/SIS_Advising_Tree__c.field-meta.xml
<CustomField>
    <fullName>SIS_Advising_Tree__c</fullName>
    <inlineHelpText>Student&apos;s current program version</inlineHelpText>
    <label>SIS Advising Tree</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2017</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>