force-app/main/default/objects/Contact/fields/SIS_Advisor_Email__c.field-meta.xml
<CustomField>
    <fullName>SIS_Advisor_Email__c</fullName>
    <inlineHelpText>Student&apos;s Academic Advisor Email Address</inlineHelpText>
    <label>SIS Advisor Email</label>
    <type>Email</type>
</CustomField>