force-app/main/default/objects/Contact/fields/SIS_Advisor_Name__c.field-meta.xml
<CustomField>
    <fullName>SIS_Advisor_Name__c</fullName>
    <inlineHelpText>Student&apos;s Academic Advisor from J1</inlineHelpText>
    <label>SIS Advisor Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>