force-app/main/default/objects/Contact/fields/SIS_Advisor_Phone__c.field-meta.xml
<CustomField>
    <fullName>SIS_Advisor_Phone__c</fullName>
    <inlineHelpText>Student&apos;s Academic Advisor Phone Number</inlineHelpText>
    <label>SIS Advisor Phone</label>
    <type>Phone</type>
</CustomField>