force-app/main/default/objects/Contact/fields/SIS_Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>SIS_Cell_Phone__c</fullName>
    <inlineHelpText>Student&apos;s Cell Phone from J1</inlineHelpText>
    <label>SIS Cell Phone</label>
    <type>Phone</type>
</CustomField>