force-app/main/default/objects/Contact/fields/SIS_Collection_Bal__c.field-meta.xml
<CustomField>
    <fullName>SIS_Collection_Bal__c</fullName>
    <inlineHelpText>Does Student have a collection Balance in J1</inlineHelpText>
    <label>SIS Collection Bal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>