force-app/main/default/objects/Contact/fields/SIS_Cur_Deg_Lvl_GPA__c.field-meta.xml
<CustomField>
    <fullName>SIS_Cur_Deg_Lvl_GPA__c</fullName>
    <label>SIS Cur Deg Lvl GPA</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>