force-app/main/default/objects/Contact/fields/SIS_Cur_Deg_Lvl_Hrs_Earn__c.field-meta.xml
<CustomField>
    <fullName>SIS_Cur_Deg_Lvl_Hrs_Earn__c</fullName>
    <label>SIS Cur Deg Lvl Hrs Earn</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>