force-app/main/default/objects/Contact/fields/SIS_Cur_Degree_Code__c.field-meta.xml
<CustomField>
    <fullName>SIS_Cur_Degree_Code__c</fullName>
    <label>SIS Cur Degree Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BBA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>