force-app/main/default/objects/Contact/fields/SIS_Cur_Degree_Desc__c.field-meta.xml
<CustomField>
    <fullName>SIS_Cur_Degree_Desc__c</fullName>
    <label>SIS Cur Degree Desc</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bachelor-Business Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>