force-app/main/default/objects/Contact/fields/SIS_Cur_Major_Completed__c.field-meta.xml
<CustomField>
    <fullName>SIS_Cur_Major_Completed__c</fullName>
    <label>SIS Cur Major Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>